--- a/BackEnd/NodeJs/package.json
+++ b/BackEnd/NodeJs/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "axios": "^0.19.0",
     "body-parser": "^1.19.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mysql": "github:mysqljs/mysql"
   },
   "devDependencies": {
     "dotenv": "^8.2.0",
