--- a/BackEnd/NodeJs/package.json
+++ b/BackEnd/NodeJs/package.json
@@ -12,8 +12,12 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.19.0",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "express-jwt": "^5.3.1",
+    "express-unless": "^0.5.0",
+    "jsonwebtoken": "^8.5.1",
     "mysql": "github:mysqljs/mysql"
   },
   "devDependencies": {
